[gd_scene load_steps=8 format=3 uid="uid://dnpsajap57a67"]

[ext_resource type="Script" path="res://Scene/UI/MenuPause.gd" id="1_skh26"]
[ext_resource type="PackedScene" uid="uid://5vsi6tcbajlq" path="res://Scene/UI/OptionsMenu.tscn" id="2_1yqma"]
[ext_resource type="Texture2D" uid="uid://bmkpifilaytdk" path="res://Scene/UI/Image/use_object_input.png" id="2_ubliv"]
[ext_resource type="Texture2D" uid="uid://b26wlxoyj1r2t" path="res://Scene/UI/Image/back_input.png" id="3_b8uto"]
[ext_resource type="Script" path="res://Scene/UI/ControllerEchapTexture.gd" id="4_do71q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2wud5"]
atlas = ExtResource("2_ubliv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amdae"]
atlas = ExtResource("3_b8uto")
region = Rect2(0, 0, 64, 64)

[node name="MenuPause" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skh26")
metadata/_edit_lock_ = true

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ContinueButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../OptionsButton")
text = "MENU_CONTINUE"

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
text = "MENU_OPTIONS"

[node name="MainMenuButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "MENU_MAIN_MENU"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
text = "MENU_QUIT"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -23.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "MENU_VALID"

[node name="ValidControllerTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_2wud5")
expand_mode = 3
script = ExtResource("4_do71q")

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "MENU_BACK"

[node name="BackControllerTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_amdae")
expand_mode = 3
script = ExtResource("4_do71q")

[node name="OptionsMenu" parent="." instance=ExtResource("2_1yqma")]
visible = false
layout_mode = 1
